[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "caddysnake"
version = "0.2.0"
description = "Python WSGI/ASGI server powered by Caddy"
authors = [
    {name = "Miguel Liezun", email = "liezun.js@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Go",
]
dependencies = [
    "click>=8.3.0",
]

[project.urls]
Homepage = "https://caddy-snake.readthedocs.io"
Repository = "https://github.com/mliezun/caddy-snake.git"

[tool.setuptools]
packages = ["caddysnake"]
include-package-data = true
ext-modules = [
    {name = "caddysnake.dummy", sources = ["dummy.c"]}
]

[tool.setuptools.package-dir]
caddysnake = "."

[tool.setuptools.package-data]
caddysnake = ["caddysnake-cli"]

[project.scripts]
caddysnake = "caddysnake.cli:main"

[tool.cibuildwheel]
before-all = "uname -a"
