[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "caddysnake"
version = "0.3.0"
description = "Python WSGI/ASGI server powered by Caddy"
authors = [
    {name = "Miguel Liezun", email = "liezun.js@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Go",
]
dependencies = [
    "click>=8.3.0",
]

[project.urls]
Homepage = "https://caddy-snake.readthedocs.io"
Repository = "https://github.com/mliezun/caddy-snake.git"

[tool.maturin]
python-source = "."
module-name = "caddysnake"
include = [
    "caddysnake-cli",
    "caddysnake_cli.py"
]

[project.scripts]
caddysnake = "caddysnake_cli:main"
